tests/Frontend/inputs/invalid/invalid_4.qasm
OPENQASM 2.0;

qreg q[1];
h r[0];
